--- a/config/locales/es.yml
+++ b/config/locales/es.yml
@@ -1,10 +1,19 @@
 es:
   hello: "Hola  mundo"
   app_name: "Instagram"
+  users:
+    index:
+      view_profile: "%{username}"
+      not_found_users: "No se encontraron usuarios usuarios con este apodo.."
   posts:
+    index:
+      query_text: "Buscar posts"
     confirm_delete: "¿Estás seguro de que deseas eliminar este post?"
     post:
       view_profile: "%{username}"
+  shared:
+    items_2:
+      query_text: "Buscar username"
   devise:
     confirmations:
       confirmed: "Your email address has been successfully confirmed."
